add beandifinition example